[package]
name = "bevy_tui"
version = "0.11.2"
edition = "2021"
authors = ["Sam Stelfox"]
description = "A plugin for making interactive Bevy applications with a TUI instead of a graphical interface."
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["bevy", "cli", "console", "terminal", "tui"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sstelfox/bevy_tui"
documentation = "https://docs.rs/bevy_tui/"

[dependencies]
bevy = { default-features = false, version = "^0.11" }
crossterm = "^0.27"
tui = {package = "ratatui", version = "^0.23"}

[lib]
name = "bevy_tui"
path = "src/lib.rs"

[workspace]
resolver = "2"
members = [
  "tools/*",
]
