[package]
authors = ["Sam Stelfox"]
categories = ["command-line-interface", "command-line-utilities"]
description = "A plugin for making interactive Bevy applications with a TUI instead of a graphical interface."
documentation = "https://docs.rs/bevy_tui/"
edition = "2021"
keywords = ["bevy", "cli", "console", "terminal", "tui"]
license = "MIT"
name = "bevy_tui"
readme = "README.md"
repository = "https://github.com/sstelfox/bevy_tui"
version = "0.11.2"

[dependencies]
bevy = {default-features = false, version = "^0.12"}
crossterm = "^0.27"
ratatui = "^0.24"

[lib]
name = "bevy_tui"
path = "src/lib.rs"

[workspace]
members = [
  "tools/*",
]
resolver = "2"
